Switch to Reveal.js CDN for Vercel compatibility

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </section>
         </div>
     </div>
-    script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.6.0/reveal.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.6.0/reveal.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script> <!-- Load core HLJS first -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.6.0/plugin/highlight/highlight.min.js"></script> <!-- Then the plugin -->
 
