--- a/index.html
+++ b/index.html
@@ -1,35 +1,239 @@
 <!doctype html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="utf-8">
-    <title>My Bincom KD Presentation</title>
-       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/5.2.1/reveal.min.css"> 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/5.2.1/theme/black.min.css">
-</head>
-<body>
-    <div class="reveal">
-        <div class="slides">
-            <section>
-                <h1>Welcome to My Presentation</h1>
-                <p>This is slide 1. Add more sections for more slides!</p>
-            </section>
-            <section>
-                <h2>Slide 2</h2>
-                <p>Powered by Reveal.js</p>
-            </section>
-        </div>
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.6.0/reveal.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script> <!-- Load core HLJS first -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.6.0/plugin/highlight/highlight.min.js"></script> <!-- Then the plugin -->
+    <title>Navigating Tech as a Newbie: Expectations, Essentials, and Busting Myths</title>
+    <meta name="description" content="Bincom Knowledge Development Session">
+    <meta name="author" content="Your Name">
 
-<script>
-  Reveal.initialize({
-    hash: true,
-    transition: 'slide',
-    slideNumber: 'c/t',
-    plugins: [ RevealHighlight ]
-  });
-</script>
-</body>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Tailwind CSS via CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              primary: '#3b82f6',     // blue-500
+              accent: '#10b981',      // emerald-500
+              darkbg: '#0f172a',
+              card: '#1e293b',
+              lighttext: '#e2e8f0'
+            },
+            fontFamily: {
+              sans: ['Inter', 'sans-serif'],
+            }
+          }
+        }
+      }
+    </script>
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
+
+    <!-- Reveal.js CDN (latest stable 5.x) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/5.1.0/reveal.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/5.1.0/theme/black.min.css" id="theme">
+
+    <!-- Highlight.js for code syntax (optional, remove if no code blocks) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/monokai-sublime.min.css">
+
+    <style>
+      .smaller-title h1 { font-size: 3.5rem !important; }
+      .smaller-title h2 { font-size: 2.5rem !important; }
+      .reveal .slides section { text-align: left; }
+      .reveal ul { margin-left: 1.5em; }
+      .reveal .text-accent { color: #10b981; }
+      .reveal .text-primary { color: #3b82f6; }
+    </style>
+  </head>
+  <body>
+    <div class="reveal">
+      <div class="slides">
+
+        <!-- Slide 1: Title -->
+        <section data-background-color="#0f172a" class="smaller-title">
+          <h1 class="text-5xl font-black text-center text-white leading-tight">
+            Navigating Tech as a Newbie
+          </h1>
+          <h2 class="text-4xl mt-8 text-primary text-center font-bold">
+            Expectations, Essentials, and Busting Myths
+          </h2>
+          <p class="mt-16 text-2xl text-center text-lighttext"> Adesemowo Emmanuel • January 9th 2026</p>
+          <p class="mt-4 text-xl text-center text-gray-400">Bincom Knowledge Development Session</p>
+        </section>
+
+        <!-- Slide 2: What Tech Really Is (Beyond Coding) -->
+        <section>
+          <h2 class="text-5xl font-bold text-primary mb-12">1️⃣ What Tech Really Is<br>(Beyond Coding)</h2>
+          <ul class="space-y-6 text-2xl text-lighttext">
+            <li>Tech is <strong>problem-solving</strong> using tools & technology</li>
+            <li>It’s not just writing code</li>
+          </ul>
+          <div class="mt-12 grid grid-cols-2 gap-8 text-xl">
+            <div class="bg-card p-8 rounded-xl">
+              <h3 class="text-2xl font-bold text-accent mb-4">Common Paths</h3>
+              <ul class="space-y-3">
+                <li>Software Development</li>
+                <li>UI/UX Design</li>
+                <li>Data & AI</li>
+                <li>Cloud & DevOps</li>
+                <li>Product / QA / Support</li>
+              </ul>
+            </div>
+            <div class="bg-card p-8 rounded-xl">
+              <h3 class="text-2xl font-bold text-accent mb-4">Key Takeaway</h3>
+              <p class="text-lg">You don’t need to “know everything” to start.<br><br>
+              <strong class="text-primary">Pick one path and begin!</strong></p>
+            </div>
+          </div>
+          <p class="mt-12 text-xl text-gray-400">👉 Tech = more than just programming</p>
+        </section>
+
+        <!-- Slide 3: What to Expect as a Newbie -->
+        <section>
+          <h2 class="text-5xl font-bold text-primary mb-12">2️⃣ What to Expect When Entering Tech</h2>
+          <ul class="space-y-8 text-2xl text-lighttext">
+            <li>Confusion is <strong>normal</strong> at the beginning</li>
+            <li>Learning feels <strong>slow</strong> before it clicks</li>
+            <li>You will <strong>Google everything</strong> (and that’s okay!)</li>
+            <li>You’ll <strong>break things</strong> — and that’s how you learn</li>
+            <li>Growth is <strong>not linear</strong></li>
+          </ul>
+          <p class="mt-12 text-2xl text-accent">This is preparing your mindset, not just your skills</p>
+        </section>
+
+        <!-- Slide 4: Essential Skills (Technical) -->
+        <section>
+          <section>
+            <h2 class="text-5xl font-bold text-primary mb-12">3️⃣ Essential Skills Every Newbie Needs</h2>
+            <h3 class="text-4xl font-bold text-accent mb-8">Technical Essentials</h3>
+            <ul class="space-y-6 text-2xl text-lighttext">
+              <li>Basic computer & internet skills</li>
+              <li>One core skill (e.g., HTML/CSS, Python, Figma)</li>
+              <li>Version control with <strong>Git</strong></li>
+              <li>Debugging mindset (read errors!)</li>
+            </ul>
+          </section>
+          <section>
+            <h3 class="text-4xl font-bold text-accent mb-8">Non-Technical Essentials</h3>
+            <ul class="space-y-6 text-2xl text-lighttext">
+              <li>Communication (explain your work)</li>
+              <li>Patience & consistency</li>
+              <li>Willingness to learn forever</li>
+              <li>Problem-solving attitude</li>
+            </ul>
+            <p class="mt-12 text-2xl text-primary">Soft skills often matter more than tools</p>
+          </section>
+        </section>
+
+        <!-- Slide 5: Learning the Right Way -->
+        <section>
+          <h2 class="text-5xl font-bold text-primary mb-12">4️⃣ Learning the Right Way<br>(Avoiding Tutorial Hell)</h2>
+          <ul class="space-y-8 text-2xl text-lighttext">
+            <li>Watching tutorials ≠ actual learning</li>
+            <li><strong>Build small projects early</strong></li>
+            <li>Follow: Learn → Practice → Build → Repeat</li>
+            <li>Don’t wait to be “perfect” before starting</li>
+          </ul>
+          <p class="mt-12 text-2xl text-accent">Build > Watch</p>
+        </section>
+
+        <!-- Slide 6: Common Myths -->
+        <section>
+          <h2 class="text-5xl font-bold text-primary mb-12">5️⃣ Common Myths About Tech<br>(And the Truth)</h2>
+          <ul class="space-y-8 text-2xl text-lighttext">
+            <li>❌ “You must be a genius” → Consistency beats talent</li>
+            <li>❌ “Tech is only for math people” → Many paths need no heavy math</li>
+            <li>❌ “If I’m stuck, tech isn’t for me” → Everyone gets stuck</li>
+            <li>❌ “Know everything before applying” → Nobody knows everything</li>
+          </ul>
+          <p class="mt-12 text-2xl text-accent">Struggle is part of the journey</p>
+        </section>
+
+        <!-- Slide 7: AI in Tech -->
+        <section>
+          <h2 class="text-5xl font-bold text-primary mb-12">6️⃣ AI in Tech: Should Newbies Be Afraid?</h2>
+          <ul class="space-y-8 text-2xl text-lighttext">
+            <li>AI replaces <strong>tasks</strong>, not problem-solvers</li>
+            <li>AI won’t take your job — <strong>someone using AI might</strong></li>
+            <li>AI is a <strong>productivity tool</strong> (like Google or Stack Overflow)</li>
+            <li>Newbies who learn AI early get a huge advantage</li>
+          </ul>
+          <p class="mt-12 text-3xl text-accent font-bold">Use AI → Stay ahead</p>
+        </section>
+
+        <!-- Slide 8: Career Reality -->
+        <section>
+          <h2 class="text-5xl font-bold text-primary mb-12">7️⃣ Career Reality in the Tech Industry</h2>
+          <ul class="space-y-8 text-2xl text-lighttext">
+            <li>First job may not be your dream role</li>
+            <li>Growth takes time — be patient</li>
+            <li>Tech careers are <strong>built</strong>, not rushed</li>
+            <li><strong>Portfolio > certificates</strong> (most times)</li>
+          </ul>
+          <p class="mt-12 text-xl text-gray-400">Start small, grow steadily</p>
+        </section>
+
+        <!-- Slide 9: How to Stay Relevant -->
+        <section>
+          <h2 class="text-5xl font-bold text-primary mb-12">8️⃣ How to Stay Relevant and Grow</h2>
+          <ul class="space-y-8 text-2xl text-lighttext">
+            <li>Continuous learning (always)</li>
+            <li>Build real projects</li>
+            <li>Network & collaborate</li>
+            <li>Master <strong>how to learn</strong> new things fast</li>
+          </ul>
+        </section>
+
+        <!-- Slide 10: Final Advice -->
+        <section data-background-color="#0f172a">
+          <h2 class="text-5xl font-bold text-white mb-12">9️⃣ Final Advice to Tech Newbies</h2>
+          <ul class="space-y-8 text-3xl text-lighttext max-w-4xl mx-auto">
+            <li>Start where you are — today</li>
+            <li>Be consistent, not perfect</li>
+            <li>Ask questions (no shame)</li>
+            <li><strong class="text-primary">Everyone in tech was once a beginner</strong></li>
+          </ul>
+          <p class="mt-16 text-3xl text-accent font-bold">You’ve got this! 🚀</p>
+        </section>
+
+        <!-- Slide 11: Q&A -->
+        <section data-background-color="#1e293b">
+          <h1 class="text-7xl font-bold text-white mb-16">Questions & Answers</h1>
+          <ul class="space-y-8 text-2xl text-lighttext">
+            <li>→ What’s the biggest fear you have about starting in tech?</li>
+            <li>→ Which path interests you most right now?</li>
+            <li>→ Any specific tool or resource you want recommendations for?</li>
+          </ul>
+          <p class="mt-16 text-3xl text-primary">Let’s talk!</p>
+        </section>
+
+        <!-- Slide 12: Thank You -->
+        <section data-background-color="#0f172a">
+          <h1 class="text-6xl font-bold text-white">Thank You!</h1>
+          <p class="mt-12 text-3xl text-primary">Keep learning, keep building 🚀</p>
+          <p class="mt-8 text-2xl text-lighttext">Reach out anytime for help or resources</p>
+        </section>
+
+      </div>
+    </div>
+
+    <!-- Reveal.js Scripts (Correct order) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/5.1.0/reveal.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/5.1.0/plugin/highlight/highlight.min.js"></script>
+
+    <script>
+      Reveal.initialize({
+        hash: true,
+        transition: 'slide',
+        slideNumber: 'c/t',
+        plugins: [ RevealHighlight ]
+      });
+    </script>
+  </body>
 </html>
